feat: Implement endpoint to delete threads #298
