# backend/swagger/threads-id.json
@@ -104,5 +104,49 @@
                 "description": "Authtenticated, but access level is not enough"
             }
         }
+    },
+    "delete": {
+        "tags": [
+            "threads"
+        ],
+        "summary": "Deletes a thread and its comments. Only valid if you own the thread (or admin)",
+        "operationId": "deleteThread",
+        "consumes": [
+            "application/json"
+        ],
+        "produces": [
+            "application/json"
+        ],
+        "security": [
+            {
+                "Bearer": []
+            }
+        ],
+        "parameters": [
+            {
+                "in": "path",
+                "name": "id",
+                "description": "ID of the thread",
+                "required": true,
+                "type": "string"
+            }
+        ],
+        "responses": {
+            "200": {
+                "description": "Deleted thread",
+                "schema": {
+                    "$ref": "./models/thread.json"
+                }
+            },
+            "401": {
+                "description": "Unauthorized"
+            },
+            "404": {
+                "description": "Thread not found"
+            },
+            "403": {
+                "description": "Authtenticated, but access level is not enough"
+            }
+        }
     }
 }
